Set release date on NEWS

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Geany-Plugins 2.1 (unreleased)
+Geany-Plugins 2.1 (2025-07-06)
 
     General:
     * New plugin: LSP (Language Server Protocol) plugin (PR#1331).
