--- a/treebrowser/README
+++ b/treebrowser/README
@@ -64,7 +64,7 @@ Installation
 License
 =======
 
-TreeBrowser plugin is distributed under the same license as in geany.
+TreeBrowser plugin is distributed under the same license as geany.
 
 
 Ideas, questions, patches and bug reports
