Adjust requirements to be a bit more realistic
Especially drop references to GTK 2.8 which had lead to some confusion,
and is so ancient that it's actually not supported by Geany for ages.

Try not to be too eager bumping the versions and only mention what is
actually needed though.

Closes geany/geany#4466.

--- a/autoclose/README
+++ b/autoclose/README
@@ -48,7 +48,7 @@ load it in Geany's plugin manager. You may change module preferences.
 Requirements
 ------------
 
-* GTK >= 2.8.0
+* Geany >= 1.26
 
 License
 -------
