--- a/shiftcolumn/README
+++ b/shiftcolumn/README
@@ -9,7 +9,7 @@ This plugin allows you to move blocks of text horizontally in left or right dire
 
 Requirements
 ------------
-For compiling the plugin yourself, you will need the GTK (>= 2.8.0) libraries
+For compiling the plugin yourself, you will need the GTK libraries
 and header files. You will also need its dependency libraries and header
 files, such as Pango, Glib and ATK. All these files are available at
 http://www.gtk.org.
