--- a/automark/README
+++ b/automark/README
@@ -25,7 +25,7 @@ be highlighted. The highlight color is "marker_search".
 Requirements
 ------------
 
-* GTK >= 2.8.0
+* Geany >= 1.26
 
 License
 -------
