--- a/keyrecord/README
+++ b/keyrecord/README
@@ -25,7 +25,7 @@ with the plugin then looks like follows: [record hotkey] [keystroke] ...
 Requirements
 ------------
 
-* GTK >= 2.8.0
+* Geany >= 1.26
 
 Contact developers
 ------------------
