--- a/xmlsnippets/README
+++ b/xmlsnippets/README
@@ -34,7 +34,7 @@ Geany will deal with other tags.
 
 Requirements
 ------------
-For compiling the plugin yourself, you will need the GTK (>= 2.8.0) libraries
+For compiling the plugin yourself, you will need the GTK libraries
 and header files. You will also need its dependency libraries and header
 files, such as Pango, Glib and ATK. All these files are available at
 http://www.gtk.org.
